# RBDynUrdf

./: CMakeLists.txt  README.md
binding/python/: CMakeLists.txt  __init__.py  generate.py
src/: CMakeLists.txt  Reader.cpp  Reader.h  UrdfStruct.cpp  UrdfStruct.h  Writer.cpp  Writer.h
tests/: CMakeLists.txt  XYZSarm.h  XYZSarmTest.cpp
