INCLUDE(../../cmake/python.cmake)

# Look for Python 2.7
SET(Python_ADDITIONAL_VERSIONS 2.7)
FINDPYTHON()

# Create the package in build dir for testing purpose
SET(LIBRARY_OUTPUT_PATH ${CMAKE_CURRENT_BINARY_DIR}/rbdyn_urdf)
CONFIGURE_FILE(__init__.py ${CMAKE_CURRENT_BINARY_DIR}/rbdyn_urdf/__init__.py COPYONLY)
SET(OUTPUT_BINDING ${CMAKE_CURRENT_BINARY_DIR}/rbdyn_urdf.cpp)

# Generate Python binding code
ADD_CUSTOM_COMMAND (
  OUTPUT ${OUTPUT_BINDING}
  COMMAND ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/generate.py ${OUTPUT_BINDING}
  DEPENDS generate.py
)

# Build the library
SET(SOURCES ${OUTPUT_BINDING})

INCLUDE_DIRECTORIES(SYSTEM ${PYTHON_INCLUDE_PATH})
INCLUDE_DIRECTORIES(.)
INCLUDE_DIRECTORIES(../../src)

ADD_LIBRARY(_rbdyn_urdf SHARED ${SOURCES})
PKG_CONFIG_USE_DEPENDENCY(_rbdyn_urdf urdfdom_headers)
PKG_CONFIG_USE_DEPENDENCY(_rbdyn_urdf urdfdom)
PKG_CONFIG_USE_DEPENDENCY(_rbdyn_urdf RBDyn)

TARGET_LINK_LIBRARIES(_rbdyn_urdf RBDynUrdf)
SET_TARGET_PROPERTIES(_rbdyn_urdf PROPERTIES PREFIX "")

# Install rules
INSTALL(TARGETS _rbdyn_urdf DESTINATION "${PYTHON_SITELIB}/rbdyn_urdf")
PYTHON_INSTALL_BUILD(rbdyn_urdf __init__.py "${PYTHON_SITELIB}")
